k8s/templates/mongodb.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    velocity.tech.v1/id: mongo-db
    # velocity.tech.v1/exposures-mongo-scheme: const="mongodb"
  name: mongo
  labels:
    app: mongo
spec:
  selector:
    matchLabels:
      api: mongo
  replicas: 1
  template:
    metadata:
      labels:
        app: mongo
        api: mongo
    spec:
      containers:
        - name: mongo
          image: mongo:5.0
          ports:
            - name: mongo
              containerPort: 27017
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: mongo
spec:
  ports:
    - port: 27017
      targetPort: 27017
      name: mongo
  selector:
    app: mongo
  type: ClusterIP
