k8s/templates/api.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    velocity.tech.v1/id: jeffs-api
    velocity.tech.v1/dependsOn: mongo-db, jeffs-worker, redis
  name: api
  labels:
    app: api
spec:
  selector:
    matchLabels:
      api: api
  replicas: 1
  template:
    metadata:
      labels:
        app: api
        api: api
    spec:
      containers:
        - name: api
          image: jdvincent/api:latest
          ports:
            - name: api-port
              containerPort: 8888
              protocol: TCP

---
apiVersion: v1
kind: Service
metadata:
  name: api
spec:
  ports:
    - port: 8888
      targetPort: 8888
      name: api
  selector:
    app: api
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api
spec:
  rules:
    - host: api-{velocity.v1.domainSuffix}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 8888
